--- a/Buoi1/bai1.html
+++ b/Buoi1/bai1.html
@@ -44,8 +44,6 @@
 
          <img src = "image/pug.jpg">
 
-
-
-
+         <a href="../Buoi2/index.html">Lien ket toi bai 2</a>
     </body>
 </html>
