--- a/Buoi4/index.html
+++ b/Buoi4/index.html
@@ -20,7 +20,7 @@
         }
 
         a:link {
-            color: pink;
+            color: red;
         }
 
         h3:hover {
@@ -38,7 +38,7 @@
     <h3 id="title">Bai CSS</h3>
     <p>Ví dụ về độ ưu tiên</p>
 
-    <a href="https://www.google.com/search?gs_ssp=eJzj4tLP1Tcoyc6oKCgxYPQSTEnML0nMT0nMzMhP1ssozU0HAKgpCv4&q=daotaodaihoc.humg&oq=&gs_lcrp=EgZjaHJvbWUqCQgCEC4YJxjqAjIJCAAQIxgnGOoCMgkIARAjGCcY6gIyCQgCEC4YJxjqAjIJCAMQIxgnGOoCMgkIBBAjGCcY6gIyCQgFECMYJxjqAjIJCAYQIxgnGOoCMgkIBxAjGCcY6gLSAQ4xNTEyNjEwODgxajBqN6gCCLACAfEF2TSRMzcfKtU&sourceid=chrome&ie=UTF-8">daotao</a>
+    <a href="https://daotaodaihoc.humg.edu.vn/#/home">daotao</a>
 
     <div class="box1">box 1</div>
     <div class="box2">box 2</div>
