--- a/Buoi5/index.html
+++ b/Buoi5/index.html
@@ -1,81 +1,302 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ví dụ đào tạo HUMG</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ví dụ Đào Tạo HUMG</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header>
-        <!-- Khối danh mục -->
-        <div>
-            <nav class="danhmuc">
-                <ul class="danhmuc-danhsach">
-                    <li class="danhmuc-muc">
-                        <a href="#" class="danhmuc-lienket">Trang chủ</a>
-                    </li>
-                    <li class="danhmuc-muc">
-                        <a href="#" class="danhmuc-lienket">Thực tập , đồ án</a>
-                    </li>
-                    <li class="danhmuc-muc">
-                        <a href="#" class="danhmuc-lienket">Thủ tục một cửa</a>
-                    </li>
-                    <li class="danhmuc-muc">
-                        <a href="#" class="danhmuc-lienket">Một cửa online</a>
-                    </li>
-                    <li class="danhmuc-muc">
-                        <a href="#" class="danhmuc-lienket">E-mail HUMG</a>
-                    </li>
-                </ul>
-            </nav>
-
-        </div>
-
-        <div class="logo">
-
-        </div>
-
+      <!-- khối danh mục -->
+      <div>
+        <nav class="danhmuc">
+          <ul class="danhmuc-danhsach">
+            <li class="danhmuc-muc">
+              <a href="#" class="danhmuc-lienket">Trang chủ</a>
+            </li>
+            <li class="danhmuc-muc">
+              <a href="#" class="danhmuc-lienket">Thực tập, đồ án</a>
+            </li>
+            <li class="danhmuc-muc">
+              <a href="#" class="danhmuc-lienket">Thủ tục Một cửa</a>
+            </li>
+            <li class="danhmuc-muc">
+              <a href="#" class="danhmuc-lienket">Một cửa Online</a>
+            </li>
+            <li class="danhmuc-muc">
+              <a href="#" class="danhmuc-lienket">E-mail HUMG</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <!-- Khối logo -->
+      <div class="logo">
+        <img src="../Buoi5/image/MDC.png" />
+      </div>
     </header>
-
     <main>
-        <!-- Nội dung bên trái -->
-        <div class="noidung-trai">
-            <!-- Khối tin tức -->
-            <div class="tintuc">
-                <div class="tieude">
-                    Tin tức
-                </div>
-                <div class="tintuc-danhsach">
-                  
-                <div class="baiviet">
-                    <p>20/01/2024 00:00</p>
-                    <img src="../Buoi3/image/pug.jpg" width="100%">
-                    <p class="noidung1">Huong dan quy trinh thuc tap, do an cua truong dai hoc mo dia chat</p>
-                </div>
-                <div class="baiviet">
-                    <p>20/01/2024 00:00</p>
-                    <img src="../Buoi3/image/pug.jpg" width="100%">
-                    <p class="noidung1">Huong dan quy trinh thuc tap, do an cua truong dai hoc mo dia chat </p>
-                </div>
-                <div class="baiviet">
-                    <p>20/01/2024 00:00</p>
-                    <img src="../Buoi3/image/pug.jpg" width="100%">
-                    <p class="noidung1">Huong dan quy trinh thuc tap, do an cua truong dai hoc mo dia chat</p>
-                </div>
+      <!-- nội dung bên trái -->
+      <div class="noidung-trai">
+        <!-- khối tin tức -->
+        <div class="tintuc">
+          <div class="tieude">Tin tức</div>
+          <!-- danh sách tin tức  -->
+          <div class="tintuc-danhsach">
+            <div class="baiviet">
+              <p style="text-align: right">20/01/2025 00:00</p>
+              <img src="./image/muoi.png" style="width: 100%" />
+              <p style="text-align: center; font-size: 20px">
+                Hướng dẫn làm đồ án thực tập tốt nghiệp học kì 2
+              </p>
             </div>
+            <div class="baiviet">
+              <p style="text-align: right">20/01/2025 00:00</p>
+              <img src="./image/muoi.png" style="width: 100%" />
+              <p style="text-align: center; font-size: 20px">
+                Hướng dẫn làm đồ án thực tập tốt nghiệp học kì 2
+              </p>
             </div>
-
+            <div class="baiviet">
+              <p style="text-align: right">20/01/2025 00:00</p>
+              <img src="./image/muoi.png" style="width: 100%" />
+              <p style="text-align: center; font-size: 20px">
+                Hướng dẫn làm đồ án thực tập tốt nghiệp học kì 2
+              </p>
+            </div>
+          </div>
         </div>
-        <div class="noidung-phai">
-
+        <div class="thongbao">
+          <div class="tieude">Thông báo</div>
+          <div class="Tbao-Ndung">
+            <div class="img">
+              <img src="./image/Ko ten.png" style="width: 98%; margin: 10px" />
+              <p style="text-align: right">20/01/2025 00:00</p>
+              <p
+                style="
+                  font-weight: bold;
+                  font-size: 20px;
+                  color: rgb(46, 80, 155);
+                  margin: 10px;
+                "
+              >
+                Về việc nghỉ học
+              </p>
+            </div>
+            <div class="noidung-thongbao">
+              <li>
+                <a class="text" href=""
+                  >Hướng dẫn đăng ký khối lượng học tập tại trang web
+                  daotaodaihoc.humg.edu.vn</a
+                >
+              </li>
+              <li>
+                <a class="text" href=""
+                  >Hướng dẫn đăng ký khối lượng học tập tại trang web
+                  daotaodaihoc.humg.edu.vn</a
+                >
+              </li>
+              <li>
+                <a class="text" href=""
+                  >Hướng dẫn đăng ký khối lượng học tập tại trang web
+                  daotaodaihoc.humg.edu.vn</a
+                >
+              </li>
+              <li>
+                <a class="text" href=""
+                  >Hướng dẫn đăng ký khối lượng học tập tại trang web
+                  daotaodaihoc.humg.edu.vn</a
+                >
+              </li>
+              <li>
+                <a class="text" href=""
+                  >Hướng dẫn đăng ký khối lượng học tập tại trang web
+                  daotaodaihoc.humg.edu.vn</a
+                >
+              </li>
+              <li>
+                <a class="text" href=""
+                  >Hướng dẫn đăng ký khối lượng học tập tại trang web
+                  daotaodaihoc.humg.edu.vn</a
+                >
+              </li>
+              <li>
+                <a class="text" href=""
+                  >Hướng dẫn đăng ký khối lượng học tập tại trang web
+                  daotaodaihoc.humg.edu.vn</a
+                >
+              </li>
+              <li>
+                <a class="text" href=""
+                  >Hướng dẫn đăng ký khối lượng học tập tại trang web
+                  daotaodaihoc.humg.edu.vn</a
+                >
+              </li>
+              <li>
+                <a class="text" href=""
+                  >Hướng dẫn đăng ký khối lượng học tập tại trang web
+                  daotaodaihoc.humg.edu.vn</a
+                >
+              </li>
+            </div>
+            <div class="thoigian-thongbao">
+              <li>
+                <a class="text" href=""><i>20/01/2025 00:00</i></a>
+              </li>
+              <li>
+                <a class="text" href=""><i>20/01/2025 00:00</i></a>
+              </li>
+              <li>
+                <a class="text" href=""><i>20/01/2025 00:00</i></a>
+              </li>
+              <li>
+                <a class="text" href=""><i>20/01/2025 00:00</i></a>
+              </li>
+              <li>
+                <a class="text" href=""><i>20/01/2025 00:00</i></a>
+              </li>
+              <li>
+                <a class="text" href=""><i>20/01/2025 00:00</i></a>
+              </li>
+              <li>
+                <a class="text" href=""><i>20/01/2025 00:00</i></a>
+              </li>
+              <li>
+                <a class="text" href=""><i>20/01/2025 00:00</i></a>
+              </li>
+              <li>
+                <a class="text" href=""><i>20/01/2025 00:00</i></a>
+              </li>
+            </div>
+          </div>
         </div>
+        <div class="huongdan">
+          <div class="tieude">Huong dan</div>
+          <div class="noidung-thoigian" style="display: flex">
+            <div class="noidung-huongdan">
+              <li>
+                <a class="text" href=""
+                  >Hướng dẫn đăng ký khối lượng học tập tại trang web
+                  daotaodaihoc.humg.edu.vn</a
+                >
+              </li>
+              <li>
+                <a class="text" href=""
+                  >Hướng dẫn đăng ký khối lượng học tập tại trang web
+                  daotaodaihoc.humg.edu.vn</a
+                >
+              </li>
+              <li>
+                <a class="text" href=""
+                  >Hướng dẫn đăng ký khối lượng học tập tại trang web
+                  daotaodaihoc.humg.edu.vn</a
+                >
+              </li>
+              <li>
+                <a class="text" href=""
+                  >Hướng dẫn đăng ký khối lượng học tập tại trang web
+                  daotaodaihoc.humg.edu.vn</a
+                >
+              </li>
+            </div>
+            <div class="thoigian-huongdan">
+              <li>
+                <a class="text" href=""><i>19/12/2024 19:57</i></a>
+              </li>
+              <li>
+                <a class="text" href=""><i>19/12/2024 19:57</i></a>
+              </li>
+              <li>
+                <a class="text" href=""><i>19/12/2024 19:57</i></a>
+              </li>
+              <li>
+                <a class="text" href=""><i>19/12/2024 19:57</i></a>
+              </li>
+            </div>
+          </div>
+        </div>
+      </div>
 
+      <!-- nội dung bên phải -->
+      <div class="noidung-phai">
+        <div class="dangnhap">
+          <div class="tieude">Dang nhap</div>
+        </div>
+        <form>
+          <div>
+            <b>MSSV</b>
+            <input
+              type="text"
+              name="ma sinh vien"
+              style="font-size: 28px; margin-top: 10px"
+            />
+          </div>
+          <br />
+          <div>
+            <b>PASS</b>
+            <input type="password" style="font-size: 28px" />
+          </div>
+        </form>
+        <a
+          href="https://daotaodaihoc.humg.edu.vn/#/forgetpass"
+          style="
+            font-size: 20px;
+            text-align: right;
+            display: block;
+            text-decoration: none;
+          "
+          ><i>Quen mat khau</i></a
+        >
+        <div>
+          <input
+            type="submit"
+            value="Dang nhap"
+            style="
+              width: 100%;
+              background-color: #2fa4e7;
+              font-size: 19px;
+              color: white;
+              height: 40px;
+            "
+          />
+        </div>
+        <div>
+          <input
+            type="submit"
+            value="Dang nhap voi Microsoft office 365"
+            style="
+              width: 100%;
+              background-color: #1394de;
+              font-size: 19px;
+              color: white;
+              margin-top: 5px;
+              height: 40px;
+            "
+          />
+        </div>
+        <div class="image">
+          <div class="tieude" style="margin-top: 20px">Cai dat AppMobile</div>
+          <div class="anh QR" style="text-align: center">
+            <img src="./image/QR.png" style="margin-top: 15px; width: 68%" />
+            <img src="./image/QR.png" style="margin-top: 15px; width: 68%" />
+          </div>
+        </div>
+      </div>
     </main>
-
     <footer>
-
+      <div
+        class="footer"
+        style="
+          background-color: #2fa4e7;
+          font-size: 18px;
+          color: white;
+          text-align: center;
+        "
+      >
+        <p>Copyright © 2020 Trường Đại học Mỏ - Địa chất</p>
+        <p>Version: MOHN-2025.08R.39 (updated 2025-08-16 13:30).</p>
+        <p>Design byAQTECH.VN</p>
+      </div>
     </footer>
-
-</body>
+  </body>
 </html>
