--- a/Buoi5/index.html
+++ b/Buoi5/index.html
@@ -291,6 +291,7 @@
           font-size: 18px;
           color: white;
           text-align: center;
+          margin-top: 100px;
         "
       >
         <p>Copyright © 2020 Trường Đại học Mỏ - Địa chất</p>
