--- a/fpt/index.html
+++ b/fpt/index.html
@@ -299,8 +299,8 @@
             <li>Quy định</li>
             <a href="#"><li>Điều khoản sử dụng</li></a>
             <a href="#"><li>Chính sách thanh toán</li></a>
-            <a href=""><li>Chính sách bảo mật thông tin dữ liệu</li></a>
-            <a href=""><li>Cam kết của FPT Telecom</li></a>
+            <a href="#"><li>Chính sách bảo mật thông tin dữ liệu</li></a>
+            <a href="#"><li>Cam kết của FPT Telecom</li></a>
           </ul>
         </div>
         <div class="noidungfooter1">
