--- a/Buoi8/index.html
+++ b/Buoi8/index.html
@@ -14,6 +14,8 @@
       // Cú pháp: let Tên biến = Giá trị;
       // Để nối chuỗi JS dùng dấu +
       let hoTen = "Pham Tiep Anh" + "<br>";
+      // let myString = value;
+      // var myString = value;
 
       document.writeln(hoTen);
 
